<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- <string name="app_name">NewsVideo</string> -->
    <string name="app_name">第一视点</string>
    <string name="news_description">>>新闻描述</string>
    <string name="guess_favourite">>>猜你喜欢</string>
    <!-- *********Setting strings definition************** -->
    <string name="action_settings">Settings</string>
    <string name="custom_label">系统设置</string>
    <string name="custom_player">播放设置</string>
    <string name="custom_category">定制类别</string>
    <string name="category_newest">最新</string>
    <string name="category_hot">最热</string>
    <string name="category_world">国际</string>
    <string name="category_domestic">国内</string>
    <string name="category_society">社会</string>
    <string name="category_finance">财经</string>
    <string name="category_military">军事</string>
    <string name="category_science">科教</string>
    <string name="category_entertain">娱乐</string>
    <string name="category_sport">体育</string>
    <string name="category_ipai">爱拍</string>
    <string name="category_other">其他</string>
    <string name="setting_exit">退出</string>
    <string name="setting_search">搜索</string>
    <string name="setting_custom">定制</string>
    <string name="setting_category_dialog">视频分类定制</string>
    <string name="setting_category_title">选择主要显示的视频类别 &#8230;</string>
    <string name="pref_category_enum_summ">选择了所有类别</string>
    <string name="pref_category_empty">没有选择任何类别</string>
    <string name="category_empty_warning">您还没有选择任何类别，请在>设置>视频分类中定制</string>
    <string name="setting_category">视频分类</string>
    <string name="setting_player">播放器</string>
    <string name="setting_disclaimer">免责声明</string>
    <string name="setting_about">关于我们</string>
    <string name="setting_update">检查更新</string>
    <string name="setting_cache">缓存</string>
    <string name="pref_auto_play">自动播放</string>
    <string name="pref_auto_play_summ">视频播放结束时自动播放当前列表中的下一个</string>
    <string name="pref_auto_update">自动检测更新</string>
    <string name="pref_manual_update">手动检测更新 &#8230;</string>
    <string name="pref_clear_cache">清除缓存&#8230;</string>
    <string name="pref_cache_size">缓存大小：</string>
    <string name="pref_cache_location">优先缓存到存储卡</string>
    <string name="pref_cache_location_summ">当存在外部存储卡时，优先缓存到外部存储</string>
    <string name="pref_disclaimer">本应用提供的所有新闻视频均来自互联网公开、免费视频。
        						视频著作权由原创作者或服务提供商所有。本应用不以任何
        						形式存储或中转视频内容。任何私自盗用本视频源、下载或
        						修改原视频所引起的版权纠纷，本应用及单位免除一切直接
        						或间接责任。</string>
    <string name="pref_about">作者：<b>合肥海晨网络科技有限公司</b>\n
        					证书号：<b>软著登字第0859425号</b></string>
    <string name="pref_about_long">应用名称：<b>%1$s</b>\n
        					版本号：<b>V%2$s</b>\n
        					作者：<b>合肥海晨网络科技有限公司</b>\n
        					证书号：<b>软著登字第0859425号</b></string>
    <string name="already_updated">已是最新版本</string>
    <string name="cache_cleared">缓存清理完毕</string>
    <string name="ok">确认</string>
    <!-- *********Setting strings definition************** -->
    <string name="hello_world">Hello world!</string>
    <string name="no_network_connection_toast">网络未连接</string>
    <string name="server_connection_timeout">服务器连接超时，请重试</string>
    <string name="video_loading_failure">视频加载失败，请重试</string>
    <string name="video_failure_network">视频加载失败，请检查网络连接</string>
    <string name="audio_device_occupation">检测到其它设备占用音频输出</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载...</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="description">Media Controls</string>
    <string name="current_the_last">当前已是最后一个</string>
    <string name="current_the_first">当前已是第一个</string>
    <string name="current_playlist_empty">当前列表为空</string>
    <string name="current_playing">当前播放：</string>
    <string name="related_video">相关视频</string>
    <string name="no_selected_video">没有选择任何视频</string>
    <string name="source">来源：</string>
    <string name="brief">简介：</string>
    <!-- ******************searchView strings definition****************** -->
    <string name="search_activity_title">SearchActivity</string>
    <string name="search_title">搜索</string>
    <string name="search_hint">输入新闻标题、关键字</string>
    <string name="search_loading">加载中&#8230;</string>
    <string name="search_result"> 的搜索结果：</string>
    <string name="clear_suggestions_title">清除痕迹</string>
    <string name="clear_suggestions">确认清除搜索痕迹？</string>
    <string name="action_sure">确定</string>
    <string name="action_cancel">取消</string>
    <string name="start_search">开始搜索</string>
    <!-- ***************************update strings***************************** -->
    <string name="update_new_version_find">发现新版本：\n</string>
    <string name="update_download">下载升级</string>
    <string name="update_nexttime">以后再说</string>
    <string name="update_ok">确定</string>
    <string name="update_cancel">取消</string>
    <string name="update_error_title">更新取消</string>
    <string name="update_error_message">下载错误，更新取消</string>
    <string name="title_activity_player">PlayerActivity</string>

</resources>
