<menu xmlns:android="http://schemas.android.com/apk/res/android" >
	<item 
	    android:id="@+id/setting_search"
	    android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_search"
        android:title="@string/setting_search"/>
    <item
        android:id="@+id/setting_custom"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_preferences"
        android:title="@string/setting_custom"/>   
    <item 
        android:id="@+id/setting_exit"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:icon="@android:drawable/ic_menu_close_clear_cancel"
        android:title="@string/setting_exit"/> 
        /> 	
</menu>
